<?xml version="1.0" encoding="utf-8"?>
<!--
	Project:  Metro4All
 	Purpose:  Routing in subway
    Authors:  Stanislav Petriakov
    Copyright (C) 2015 NextGIS

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/sLimits">

    <EditTextPreference
        android:defaultValue="40"
        android:dialogTitle="@string/sPrefCarriageSizeTitle"
        android:inputType="number"
        android:key="max_width"
        android:summary="@string/sPrefCarriageSizeSummary"
        android:title="@string/sPrefCarriageSize"/>
    <EditTextPreference
        android:defaultValue="40"
        android:dialogTitle="@string/sPrefWheelBaseSizeTitle"
        android:inputType="number"
        android:key="wheel_width"
        android:summary="@string/sPrefWheelBaseSizeSummary"
        android:title="@string/sPrefWheelBaseSize"/>
    <Preference
        android:selectable="false"
        android:enabled="true"
        android:summary="@string/sPrefLimitationsInfo"/>
</PreferenceScreen>
